Bug 323729 - When pausing music at the end of the fadeout increased volume for fraction of second appears
Summary: When pausing music at the end of the fadeout increased volume for fraction of...
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: Playback (other bugs)
Version First Reported In: 2.8.0
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: 2.9
Assignee: Amarok Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-08-19 14:59 UTC by Vit Pelcak
Modified: 2013-11-13 05:49 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.8.1
Sentry Crash Report:


Attachments
Possible fix for fade-out glitch (516 bytes, patch)
2013-08-30 11:30 UTC, Mark Kretschmann
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Vit Pelcak 2013-08-19 14:59:10 UTC
When I play song in Amarok, I have fade out enabled.

At the end of the fade out effect, glitch with increased volume appears for fraction of second.
It doesn't happen on Stop, only on Pause.

Amarok 2.8.0
phonon-gstreamer 4.6.3
Gstreamer 0.10.36 (or 1.0.5-r1, I have both installed)

Reproducible: Always

Steps to Reproduce:
1. Play some music
2. Pause it
3. Hear increased volume at the end of fade out


Expected Results:  
Glitch shouldn't appear. Sound should fade out to silence.
Comment 1 Myriam Schweingruber 2013-08-19 15:10:30 UTC
I can't reproduce this here at all, what type of tracks are these? Is this only on one single track or on all tracks regardless of the type?
Just to make sure: do you have ReplayGain active? Please disable it as it could falsify the results.
Comment 2 Matěj Laitl 2013-08-20 13:49:25 UTC
I think I've also hit this in past and I may have a clue what we do wrong in the code. I'll look at this as time permits (not really soon unfortunately).
Comment 3 Mark Kretschmann 2013-08-20 16:20:19 UTC
@Vit: Does it issue happen always for you, or just sometimes? And did you change the default fade-out duration?
Comment 4 Vit Pelcak 2013-08-30 10:24:27 UTC
It happens to me always and I use just default fade out.
Comment 5 Mark Kretschmann 2013-08-30 11:30:52 UTC
Created attachment 82033 [details]
Possible fix for fade-out glitch
Comment 6 Mark Kretschmann 2013-08-30 11:31:14 UTC
Please try with the attached patch.
Comment 7 Vit Pelcak 2013-09-06 14:13:37 UTC
Unfortunatelly, I didn't spot the difference. :-(
Comment 8 Mark Kretschmann 2013-11-12 06:01:54 UTC
Confirming because of multiple reports from users. Unfortunately I still can't reproduce the issue here, though.
Comment 9 Mark Kretschmann 2013-11-13 05:49:13 UTC
Git commit 69f0e02aa3519d2b28cddbbb6d6535786823a4aa by Mark Kretschmann.
Committed on 13/11/2013 at 05:43.
Pushed by markey into branch 'master'.

Fix sound glitch with "fade-out on pause" with GStreamer.

This is really just an ugly workaround for an issue with
(Phonon-)GStreamer. Essentially there is no way to flush the audio
buffers, so that implementing fade-out in combination with pausing
becomes a bit of a gamble.

Please test, as I cannot reproduce the sound glitch on my system!
FIXED-IN: 2.8.1
BACKPORT

M  +1    -0    ChangeLog
M  +1    -1    src/EngineController.cpp

http://commits.kde.org/amarok/69f0e02aa3519d2b28cddbbb6d6535786823a4aa